--- a/charts/generic-app/templates/deployment.yaml
+++ b/charts/generic-app/templates/deployment.yaml
@@ -30,18 +30,12 @@ spec:
               protocol: TCP
           resources: 
             {{- toYaml .Values.resources | nindent 12 }}
-          {{- if .Values.env }}
           env:
             {{- toYaml .Values.env | nindent 12 }}
-          {{- end }}
-          {{- if .Values.envFrom }}
           envFrom:
             {{- toYaml .Values.envFrom | nindent 12 }}
-          {{- end }}
-          {{- if .Values.extraVolumeMounts }}
           volumeMounts:
             {{- toYaml .Values.extraVolumeMounts | nindent 12 }}
-          {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -60,10 +54,8 @@ spec:
           persistentVolumeClaim:
             claimName: {{ .Release.Name }}
       {{- end }}
-      {{- if .Values.extraVolumes }}
       volumes:
         {{- toYaml .Values.extraVolumes | nindent 8 }}
-      {{- end }}
 
 {{- else }}
 apiVersion: apps/v1
@@ -82,14 +74,14 @@ spec:
       {{- toYaml .Values.labels | nindent 6 }}
   template:
     metadata:
-      {{- if .Values.podAnnotations }}
       annotations:
         {{- toYaml .Values.podAnnotations | nindent 8 }}
-      {{- end }}
       labels:
         {{- toYaml .Values.labels | nindent 8 }}
     spec:
+      {{- if .Values.serviceaccount.enabled }}
       serviceAccountName: {{ .Values.serviceaccount.name }}
+      {{- end }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
@@ -104,18 +96,12 @@ spec:
               protocol: TCP
           resources: 
             {{- toYaml .Values.resources | nindent 12 }}
-          {{- if .Values.env }}
           env:
             {{- toYaml .Values.env | nindent 12 }}
-          {{- end }}
-          {{- if .Values.envFrom }}
           envFrom:
             {{- toYaml .Values.envFrom | nindent 12 }}
-          {{- end }}
-          {{- if .Values.extraVolumeMounts }}
           volumeMounts:
             {{- toYaml .Values.extraVolumeMounts | nindent 12 }}
-          {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -134,8 +120,6 @@ spec:
           persistentVolumeClaim:
             claimName: {{ .Release.Name }}
       {{- end }}
-      {{- if .Values.extraVolumes }}
       volumes:
         {{- toYaml .Values.extraVolumes | nindent 8 }}
-      {{- end }}
 {{- end }}
